Launch app from gradle using gradle run

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .settings
 .yardoc
 .yardopts
+.directory
 bin
 build
 target
@@ -21,4 +22,5 @@ test-tmp
 *.class
 mods
 /.nb-gradle/
+/.nb-gradle-properties
 /diy/.nb-gradle/
