Pridanie dokumentacie a komentarov

--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,7 @@ dependencies {
 shadowJar {
     classifier = 'fat'
     manifest {
-        attributes 'Main-Class': 'io.vertx.core.Starter'
-        attributes 'Main-Verticle': 'io.vertx.example.HelloWorldVerticle'
+        attributes 'Main-Class': mainClassName
     }
     mergeServiceFiles {
         include 'META-INF/services/io.vertx.core.spi.VerticleFactory'
