Event bus bridge

--- a/src/main/resources/config/webAppModule.json
+++ b/src/main/resources/config/webAppModule.json
@@ -1,5 +1,12 @@
 {
+    "global": {
+        "develMode" : true
+    },
     "server": {
         "port": 8081
-    }
+    },
+    "demoWebApp" : {
+        
+    },
+    "reload": 7
 }
